# LiziaNetwork__Eido

./: CMakeLists.txt  README.md
src/: main.cpp
src/LiziaNetwork/Driver/: Activators.cpp  Activators.h  Driver.cpp  Driver.h
src/LiziaNetwork/Layer/: BaseLayer.cpp  BaseLayer.h  HidenLayer.cpp  HidenLayer.h  IncomingLayer.cpp  IncomingLayer.h  OutgoingLayer.cpp  OutgoingLayer.h
src/LiziaNetwork/Network/: EventDataStructure.h  IncomingDataStructure.h  Network.cpp  Network.h  NetworkConstructor.cpp  NetworkConstructor.h  OutgoingDataStructure.h
src/LiziaNetwork/NetworkSegment/: NetworkSegment.cpp  NetworkSegment.h  NetworkSegmentConstructor.cpp  NetworkSegmentConstructor.h
src/LiziaNetwork/Neuron/: BaseNeuron.cpp  BaseNeuron.h  DefaultNeuron.cpp  DefaultNeuron.h  IncomingNeuron.cpp  IncomingNeuron.h
